--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -113,3 +113,17 @@
   preview={wave-mechanics.gif},
   abbr={Vision}
 }
+
+@ARTICLE{Van_Herstraeten2021-nj,
+  title     = "Quantum Wigner entropy",
+  author    = "Van Herstraeten, Zacharie and Cerf, Nicolas Jean",
+  journal   = "Phys. Rev. A",
+  publisher = "American Physical Society",
+  volume    =  104,
+  number    =  4,
+  pages     =  042211,
+  month     =  oct,
+  year      =  2021,
+  doi       = "10.1103/PhysRevA.104.042211",
+  issn      = "1050-2947"
+}
