--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,36 +3,6 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
 @article{PhysRev.47.777,
   abbr={PhysRev},
   title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
@@ -58,65 +28,14 @@
   additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
   annotation={* Example use of superscripts<br>† Albert Einstein},
   selected={true},
-  inspirehep_id = {3255}
+  inspirehep_id = {3255},
+  preview={brownian-motion.gif}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
-}
 
 @ARTICLE{Van_Herstraeten2021-nj,
   title     = "Quantum Wigner entropy",
-  author    = "Van Herstraeten, Zacharie and Cerf, Nicolas Jean",
+  author    = "Van Herstraeten, Zacharie and Cerf, Nicolas J.",
   journal   = "Phys. Rev. A",
   publisher = "American Physical Society",
   volume    =  104,
@@ -126,4 +45,87 @@
   year      =  2021,
   doi       = "10.1103/PhysRevA.104.042211",
   issn      = "1050-2947"
+  google_scholar_id={qjMakFHDy7sC},
+}
+
+@ARTICLE{Van-Herstraeten2023-ww,
+  title     = "Continuous majorization in quantum phase space",
+  author    = "Van Herstraeten, Z and Jabbour, M G and Cerf, N J",
+  journal   = "Quantum",
+  publisher = "quantum-journal.org",
+  volume    =  7,
+  pages     =  1021,
+  year      =  2023,
+  doi       = "10.22331/q-2023-05-24-1021"
+}
+
+@ARTICLE{Van-Herstraeten2024-fr,
+  title     = "Classical capacity of quantum non-Gaussian attenuator and
+               amplifier channels",
+  author    = "Van Herstraeten, Zacharie and Guha, Saikat and Cerf, Nicolas J",
+  journal   = "Int. J. Quantum Inf.",
+  publisher = "World Scientific Pub Co Pte Ltd",
+  volume    =  22,
+  number    =  05,
+  month     =  aug,
+  year      =  2024,
+  doi       = "10.1142/s0219749924400033",
+  issn      = "0219-7499,1793-6918",
+  language  = "en"
+}
+
+@ARTICLE{Van-Herstraeten2024-bo,
+  title     = "Majorization theoretical approach to entanglement enhancement via
+               local filtration",
+  author    = "Van Herstraeten, Zacharie and Cerf, Nicolas J and Guha, Saikat
+               and Gagatsos, Christos N",
+  journal   = "Phys. Rev. A (Coll. Park.)",
+  publisher = "American Physical Society (APS)",
+  volume    =  110,
+  number    =  4,
+  pages     =  042430,
+  month     =  oct,
+  year      =  2024,
+  doi       = "10.1103/physreva.110.042430",
+  issn      = "2469-9926,2469-9934",
+  language  = "en"
+}
+
+@ARTICLE{Pizzimenti2024-rb,
+  title     = "Exploring the possibility of a complex-valued non-Gaussianity
+               measure for quantum states of light",
+  author    = "Pizzimenti, Andrew J and Dhara, Prajit and Van Herstraeten,
+               Zacharie and Cheng, Sijie and Gagatsos, Christos N",
+  journal   = "APL Quantum",
+  publisher = "AIP Publishing",
+  volume    =  1,
+  number    =  3,
+  month     =  sep,
+  year      =  2024,
+  doi       = "10.1063/5.0219011",
+  issn      = "2835-0103",
+  language  = "en"
+}
+
+@ARTICLE{Singh2019-jk,
+  title     = "Quantum thermodynamics in a multipartite setting: A resource
+               theory of local Gaussian work extraction for multimode bosonic
+               systems",
+  author    = "Singh, Uttam and Jabbour, Michael Gide and Van Herstraeten,
+               Zacharie and Cerf, Nicolas J",
+  journal   = "Phys. Rev. A",
+  publisher = "APS",
+  year      =  2019,
+  issn      = "1050-2947"
+}
+
+@ARTICLE{Cerf2023-gn,
+  title   = "Complex-valued Wigner entropy of a quantum state",
+  author  = "Cerf, Nicolas J and Hertz, Anaelle and Van Herstraeten, Zacharie",
+  journal = "Quantum Stud. Math. Found.",
+  month   =  oct,
+  year    =  2023,
+  eprint  = "2310.19296",
+  doi     = "10.1007/s40509-024-00325-8",
+  issn    = "2196-5609,2196-5617"
 }
