--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -44,8 +44,8 @@
   month     =  oct,
   year      =  2021,
   doi       = "10.1103/PhysRevA.104.042211",
-  issn      = "1050-2947"
-  google_scholar_id={qjMakFHDy7sC},
+  issn      = "1050-2947",
+  google_scholar_id= "qjMakFHDy7sC"
 }
 
 @ARTICLE{Van-Herstraeten2023-ww,
