--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -45,7 +45,8 @@
   year      =  2021,
   doi       = "10.1103/PhysRevA.104.042211",
   issn      = "1050-2947",
-  google_scholar_id= "qjMakFHDy7sC"
+  google_scholar_id= "SyKuBvQAAAAJ:qjMakFHDy7sC",
+  pdf= "http://quic.ulb.ac.be/_media/publications/2021-pra-104-042211.pdf"
 }
 
 @ARTICLE{Van-Herstraeten2023-ww,
