--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -46,7 +46,8 @@
   doi       = "10.1103/PhysRevA.104.042211",
   issn      = "1050-2947",
   google_scholar_id= "SyKuBvQAAAAJ:qjMakFHDy7sC",
-  pdf= "http://quic.ulb.ac.be/_media/publications/2021-pra-104-042211.pdf"
+  pdf= "http://quic.ulb.ac.be/_media/publications/2021-pra-104-042211.pdf",
+  abstract= "We define the Wigner entropy of a quantum state as the differential Shannon entropy of the Wigner function of the state. This quantity is properly defined only for states that possess a positive Wigner function, which we name Wigner-positive states, but we argue that it is a proper measure of quantum uncertainty in phase space. It is invariant under symplectic transformations (displacements, rotations, and squeezing) and we conjecture that it is lower bounded by ln⁡𝜋+1 within the convex set of Wigner-positive states. It reaches this lower bound for Gaussian pure states, which are natural minimum-uncertainty states. This conjecture bears a resemblance with the Wehrl-Lieb conjecture, and we prove it over the subset of passive states of the harmonic oscillator which are of particular relevance in quantum thermodynamics. Along the way, we present a simple technique to build a broad class of Wigner-positive states exploiting an optical beam splitter and reveal an unexpectedly simple convex decomposition of extremal passive states. The Wigner entropy is anticipated to be a significant physical quantity, for example, in quantum optics where it allows us to establish a Wigner entropy-power inequality. It also opens a way towards stronger entropic uncertainty relations. Finally, we define the Wigner-Rényi entropy of Wigner-positive states and conjecture an extended lower bound that is reached for Gaussian pure states."
 }
 
 @ARTICLE{Van-Herstraeten2023-ww,
