--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -46,25 +46,26 @@
   doi       = "10.1103/PhysRevA.104.042211",
   issn      = "1050-2947",
   google_scholar_id= "SyKuBvQAAAAJ:qjMakFHDy7sC",
-  pdf= "http://quic.ulb.ac.be/_media/publications/2021-pra-104-042211.pdf",
+  pdf=     "http://quic.ulb.ac.be/_media/publications/2021-pra-104-042211.pdf",
   abstract= "We define the Wigner entropy of a quantum state as the differential Shannon entropy of the Wigner function of the state. This quantity is properly defined only for states that possess a positive Wigner function, which we name Wigner-positive states, but we argue that it is a proper measure of quantum uncertainty in phase space. It is invariant under symplectic transformations (displacements, rotations, and squeezing) and we conjecture that it is lower bounded by ln⁡𝜋+1 within the convex set of Wigner-positive states. It reaches this lower bound for Gaussian pure states, which are natural minimum-uncertainty states. This conjecture bears a resemblance with the Wehrl-Lieb conjecture, and we prove it over the subset of passive states of the harmonic oscillator which are of particular relevance in quantum thermodynamics. Along the way, we present a simple technique to build a broad class of Wigner-positive states exploiting an optical beam splitter and reveal an unexpectedly simple convex decomposition of extremal passive states. The Wigner entropy is anticipated to be a significant physical quantity, for example, in quantum optics where it allows us to establish a Wigner entropy-power inequality. It also opens a way towards stronger entropic uncertainty relations. Finally, we define the Wigner-Rényi entropy of Wigner-positive states and conjecture an extended lower bound that is reached for Gaussian pure states."
 }
 
 @ARTICLE{Van-Herstraeten2023-ww,
   title     = "Continuous majorization in quantum phase space",
-  author    = "Van Herstraeten, Z and Jabbour, M G and Cerf, N J",
+  author    = "Van Herstraeten, Zacharie and Jabbour, Michael G. and Cerf, Nicolas J.",
   journal   = "Quantum",
   publisher = "quantum-journal.org",
   volume    =  7,
   pages     =  1021,
   year      =  2023,
-  doi       = "10.22331/q-2023-05-24-1021"
+  doi       = "10.22331/q-2023-05-24-1021",
+  pdf       = "https://quantum-journal.org/papers/q-2023-05-24-1021/pdf/"
 }
 
 @ARTICLE{Van-Herstraeten2024-fr,
   title     = "Classical capacity of quantum non-Gaussian attenuator and
                amplifier channels",
-  author    = "Van Herstraeten, Zacharie and Guha, Saikat and Cerf, Nicolas J",
+  author    = "Van Herstraeten, Zacharie and Guha, Saikat and Cerf, Nicolas J.",
   journal   = "Int. J. Quantum Inf.",
   publisher = "World Scientific Pub Co Pte Ltd",
   volume    =  22,
@@ -73,15 +74,16 @@
   year      =  2024,
   doi       = "10.1142/s0219749924400033",
   issn      = "0219-7499,1793-6918",
-  language  = "en"
+  language  = "en",
+  pdf       = "http://quic.ulb.ac.be/_media/publications/2024-ijqi-22-2440003.pdf"
 }
 
 @ARTICLE{Van-Herstraeten2024-bo,
   title     = "Majorization theoretical approach to entanglement enhancement via
                local filtration",
-  author    = "Van Herstraeten, Zacharie and Cerf, Nicolas J and Guha, Saikat
+  author    = "Van Herstraeten, Zacharie and Cerf, Nicolas J. and Guha, Saikat
                and Gagatsos, Christos N",
-  journal   = "Phys. Rev. A (Coll. Park.)",
+  journal   = "Phys. Rev. A",
   publisher = "American Physical Society (APS)",
   volume    =  110,
   number    =  4,
@@ -90,14 +92,14 @@
   year      =  2024,
   doi       = "10.1103/physreva.110.042430",
   issn      = "2469-9926,2469-9934",
-  language  = "en"
-}
+  language  = "en",
+  pdf       = "http://quic.ulb.ac.be/_media/publications/2024-pra-110-042430.pdf"
 
 @ARTICLE{Pizzimenti2024-rb,
   title     = "Exploring the possibility of a complex-valued non-Gaussianity
                measure for quantum states of light",
-  author    = "Pizzimenti, Andrew J and Dhara, Prajit and Van Herstraeten,
-               Zacharie and Cheng, Sijie and Gagatsos, Christos N",
+  author    = "Pizzimenti, Andrew J. and Dhara, Prajit and Van Herstraeten,
+               Zacharie and Cheng, Sijie and Gagatsos, Christos N.",
   journal   = "APL Quantum",
   publisher = "AIP Publishing",
   volume    =  1,
@@ -106,28 +108,31 @@
   year      =  2024,
   doi       = "10.1063/5.0219011",
   issn      = "2835-0103",
-  language  = "en"
+  language  = "en",
+  pdf       = "https://pubs.aip.org/aip/apq/article-pdf/doi/10.1063/5.0219011/20129471/036117_1_5.0219011.pdf"
 }
 
 @ARTICLE{Singh2019-jk,
   title     = "Quantum thermodynamics in a multipartite setting: A resource
                theory of local Gaussian work extraction for multimode bosonic
                systems",
-  author    = "Singh, Uttam and Jabbour, Michael Gide and Van Herstraeten,
-               Zacharie and Cerf, Nicolas J",
+  author    = "Singh, Uttam and Jabbour, Michael G. and Van Herstraeten,
+               Zacharie and Cerf, Nicolas J.",
   journal   = "Phys. Rev. A",
   publisher = "APS",
   year      =  2019,
-  issn      = "1050-2947"
+  issn      = "1050-2947",
+  pdf = "http://quic.ulb.ac.be/_media/publications/2019_pra_100_042104.pdf"
 }
 
 @ARTICLE{Cerf2023-gn,
   title   = "Complex-valued Wigner entropy of a quantum state",
-  author  = "Cerf, Nicolas J and Hertz, Anaelle and Van Herstraeten, Zacharie",
+  author  = "Cerf, Nicolas J. and Hertz, Anaelle and Van Herstraeten, Zacharie",
   journal = "Quantum Stud. Math. Found.",
   month   =  oct,
   year    =  2023,
   eprint  = "2310.19296",
   doi     = "10.1007/s40509-024-00325-8",
-  issn    = "2196-5609,2196-5617"
+  issn    = "2196-5609,2196-5617",
+  pdf = "https://rdcu.be/dIblJ"
 }
